--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+/* **************************** */
+
+
+/* **************************** */
 body {
     background-color: black;
     color: rgba(255,255,255,0.8);
@@ -13,9 +17,8 @@ body {
     color:white;
 }
 .text{
-  margin-left: 180px;
-  padding-bottom: 60px;
-  margin-top: 250px;  
+  margin-left: 400px;
+
 }
 #mainText{
     margin-top: 30vh;
